<resources>
    <string name="app_name">MobileApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="have_account_sign_in">Have account? Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="load_avatar">Load avatar</string>
    <string name="text_info">Info</string>
    <string name="text_map">Map</string>
    <string name="text_chat">Chat</string>
    <string name="text_receiver">Receiver</string>
    <string name="destination_address">Destination address: </string>
    <string name="parcels_to_pick_up">Parcels to pick up from destination address</string>
    <string name="parcles_to_deliver">Parcels to deliver to destination</string>
    <string name="my_current_parcels">My current parcels</string>
    <string name="start_work">Start working session</string>
    <string name="take_a_break">Take a break</string>
    <string name="move_to_next">Move to the next order</string>
    <string name="destination_address_info">Destination address info:</string>
    <string name="title_activity_maps">Map</string>
    <string name="build_the_route">Build the route</string>

</resources>
