<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/text_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/text_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/text_chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/text_receiver"
        app:showAsAction="ifRoom" />

</menu>